add custom font

--- a/code/esp32/esp-idf/i2c_oled/main/CMakeLists.txt
+++ b/code/esp32/esp-idf/i2c_oled/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "i2c_oled_example_main.c" "lvgl_demo_ui.c"
+idf_component_register(SRCS "font_mate_60_1bpp.c" "i2c_oled_example_main.c" "lvgl_demo_ui.c"
                        INCLUDE_DIRS ".")
